test/invalid/AbstractErrors/AbstractErrors.plume
/**
 * Semantically incorrect class, defining abstract methods in a non abstract class
 * @author 35237, Marcos Vasco
 */
class AbstractErrors extends Object is
  
  abstract method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean 